<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/operand_one"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/operand_two"
        app:layout_constraintEnd_toStartOf="@+id/operand_two"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/operand_two"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/operand_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        tools:targetApi="o" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="125dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operand_two"
        app:layout_constraintVertical_bias="0.84000003" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/subtract"
        app:layout_constraintBaseline_toBaselineOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/add" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/multiply"
        app:layout_constraintBaseline_toBaselineOf="@+id/subtract"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintStart_toEndOf="@+id/subtract" />

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/division"
        app:layout_constraintBaseline_toBaselineOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiply" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>